<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SKY - Vendas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_logoff">Logoff</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lblPergunta">Pergunta</string>
    <string name="lblTemCertezaQueDesejaSairDoSistema">Tem certeza que deseja sair do sistema?</string>
    <string name="lblSim">Sim</string>
    <string name="lblNao">Não</string>
    <string name="lblLogin">Login</string>
    <string name="lblSenha">Senha</string>
    <string name="lblEntrar">Entrar</string>
    <string name="lblDigiteSeusDadosDeLogin">Digite seus dados de login</string>
    <string name="lblParaEntrarNoSistemaConecteseAInternet">Para entrar no sistema conecte-se a internet!</string>
    <string name="lblOPreenchimentoDoCampoLOGINEObrigatorio">O preenchimento do campo LOGIN é obrigatório</string>
    <string name="lblOPreenchimentoDoCampoSENHAEObrigatorio">O preenchimento do campo SENHA é obrigatório</string>
    <string name="lblEscolhaUmaAcao">Escolha uma ação</string>
    <string name="lblCadastrar">Cadastrar</string>
    <string name="lblVisualizar">Visualizar</string>
    <string name="lblEditar">Editar</string>
    <string name="lblPedidoDeVenda">Pedidos de venda</string>
    <string name="title_activity_dados_cliente">DadosClienteActivity</string>
    <string name="lbl2DadosDoCliente">2 - Dados do cliente</string>
    <string name="lblPessoa">Tipo de pessoa</string>
    <string name="lblFisica">Física</string>
    <string name="lblJuridica">Jurídica</string>
    <string name="lblEstrangeiro">Estrangeiro</string>
    <string name="lblNomeRazaoSocial">Nome / Razão Social</string>
    <string name="lblddmmaaaa">DD/MM/AAAA</string>
    <string name="lblDataNascimento">Data de nascimento</string>
    <string name="lblMascaraTelefone">(99) 9999-9999</string>
    <string name="lblTelefoneResidencial">Telefone residencial</string>
    <string name="lblTelefoneComercial">Telefone comercial / Ramal</string>
    <string name="lblRamal">9999</string>
    <string name="lblTelefoneCelular">Telefone celular</string>
    <string name="lblMasculino">Masculino</string>
    <string name="lblFeminino">Feminino</string>
    <string name="lblSexo">Sexo</string>
    <string name="lblCasado">Casado</string>
    <string name="lblSolteiro">Solteiro</string>
    <string name="lblOutros">Outros</string>
    <string name="lblEstadoCivil">Estado civil</string>
    <string name="lblEmail">E-mail</string>
    <string name="lblEmailProvedor">email@site.com</string>
    <string name="lblEmailNaoInformado">E-mail não informado</string>
    <string name="title_activity_instalacao_receptores">InstalacaoReceptoresActivity</string>
    <string name="lblCPFCNPJ">CPF / CNPJ</string>
    <string name="lblMascaraCPF">99.99.999-99</string>
    <string name="lblRGIERNE">RG / IE / RNE</string>
    <string name="lbl3InstalacaoReceptores">3 - Instalação dos receptores</string>
    <string name="lblTipoDoImovel">Tipo do imóvel</string>
    <string name="lblApartamento">Apartamento</string>
    <string name="lblCasa">Casa</string>
    <string name="lblEndereco">Endereço</string>
    <string name="lblNumero">Número</string>
    <string name="lblAptoCasa">Apto / Casa</string>
    <string name="lblComplemento">Complemento</string>
    <string name="lblBairro">Bairro</string>
    <string name="lblNomeDoCondominio">Nome do condomínio</string>
    <string name="lblNomeDoEdificio">Nome do edifício</string>
    <string name="lblCidade">Cidade</string>
    <string name="lblUF">UF</string>
    <string name="lblCEP">CEP</string>
    <string name="lblPontoDeReferencia">Ponto de referência</string>
    <string name="lblNomeDoResponsavelPeloAtendimentoAoInstalado">Nome do responsável pelo atendimento ao instalador</string>
    <string name="lblReceptores">Receptores</string>
    <string name="lblPrincipal">Principal</string>
    <string name="lblSKY">SKY</string>
    <string name="lblHD">HD</string>
    <string name="lblFullHD">Full HD</string>
    <string name="lblHDCanaisAbertos">HD Canais abertos</string>
    <string name="lblOpcional">Opcional</string>
    <string name="lblBandaLarga">Banda larga</string>
    <string name="lbl4EnderecoCobranca">4 - Endereço de cobrança</string>
    <string name="lblEObrigatorioOPreenchimentoDoCampo">É obrigatório o preenchimento do campo</string>
    <string name="lblMascaraCEP">99999-999</string>
    <string name="lblSKYLight2">Light 2</string>
    <string name="lblSKYPrepago6M">Pré-pago 6M</string>
    <string name="lblSKYPrepago12M">Pré-pago 12M</string>
    <string name="lblSKYPrepago24M">Pré-pago 24M</string>
    <string name="lblPacotes">Pacotes</string>
    <string name="lblPacotesHD">Pacotes HD</string>
    <string name="lblSKYMixHD">SKY Mix HD</string>
    <string name="lblSKYLightHD">SKY Light HD</string>
    <string name="lblCombosHD">Combos HD</string>
    <string name="lblHBOMAX">HBO MAX</string>
    <string name="lblTelecine">Telecine</string>
    <string name="lblCinema">Cinema</string>
    <string name="lblCombosHDPlus">Combos HD Plus</string>
    <string name="lblCinemaFutebol">Cinema + Futebol</string>
    <string name="lblCombosHDFull">Combos HD Full</string>
    <string name="lbl5ProgramacaoEPromocoes">5 - Programação e Promoções</string>
    <string name="lblPacotesAdicionais">Pacotes adicionais</string>
    <string name="lblHDLight">HD Light</string>
    <string name="lblHDMix">HD Mix</string>
    <string name="lblHDFull">HD Full</string>
    <string name="lblHBOHD">HBO HD</string>
    <string name="lblTelecineHD">Teleci. HD</string>
    <string name="lblHBODigital4">HBO Digital 4</string>
    <string name="lblHBOBrasil">HBO Brasil</string>
    <string name="lblNenhum">Nenhum</string>
    <string name="lblTelecine3">Telec. 3</string>
    <string name="lblPremiereSD">Premier SD</string>
    <string name="lblPremHDPlay">Prem. HD + Play</string>
    <string name="lblInformacoesAdicionais">Informações adicionais</string>
    <string name="lblMensalidadeDeProgramacao">Mensalidade de programação (total de a + b c)</string>
    <string name="lbl6ComodatoVenda">6 - Comodato / Venda</string>
    <string name="lblENecessarioSelecionarCasaOuApto">É obrigatório selecionar uma opção entre CASA ou APTO</string>
    <string name="lblAtencao">Atenção!</string>
    <string name="lblComodatoVenda">Comodato / Venda (no ato)</string>
    <string name="lblTaxaDeAdesao">Taxa de adesão (comodato)</string>
    <string name="lblVenda">Venda (mercantil)</string>
    <string name="lblValor">Valor</string>
    <string name="lblCartaoCreditoDebito">Cartão de crédito / Débito</string>
    <string name="lblDebAutoContaCorrente">Deb. auto conta-corrente</string>
    <string name="lblFichaCompensacao">Ficha de compensação</string>
    <string name="lblCEFFinanciamento">CEF Financiamento</string>
    <string name="lblPECPFB">PEC / PFB</string>
    <string name="lblMensalidadesDeProgramacao">Mensalidades de programação</string>
    <string name="lblBoletoBancario">Boleto bancário</string>
    <string name="lblSKYPrePagoLivre12Meses">SKY Pré-pago livre 12 meses</string>
    <string name="lblAVista">À vista</string>
    <string name="lblParcelado12Vezes">Parcelado (12 vezes)</string>
    <string name="lblValorDaParcela">Valor da parcela</string>
    <string name="lblQuantidadeDeParcelas">Quantidade de parcelas</string>
    <string name="lbl7DadosParaDebito">7 - Dados para débito</string>
    <string name="lbl1PontoDeVenda">1 - Ponto de Venda</string>
    <string name="lblPontoDeVenda">Ponto de Venda</string>
    <string name="lblPedidosCadastrados">Pedidos cadastrados</string>
    <string name="lblDebitoAutomaticoCartaoCredito">Débito automático no cartão de crédito</string>
    <string name="lblVisa">Visa</string>
    <string name="lblHipercard">Hipercard</string>
    <string name="lblDiners">Diners</string>
    <string name="lblMasterCard">Mastercard</string>
    <string name="lblAmex">Amex</string>
    <string name="lblElo">Elo</string>
    <string name="lblMMAA">MM/AA</string>
    <string name="lblNumeroDoCartao">Número do cartão</string>
    <string name="lblValidade">Validade</string>
    <string name="lblDebitoAutomaticoEmContaCorrente">Débito automático em conta corrente</string>
    <string name="lblBanrisul">Banrisul</string>
    <string name="lblBradesco">Bradesco</string>
    <string name="lblBancoDoBrasil">Banco do Brasil</string>
    <string name="lblCitibank">Citibank</string>
    <string name="lblCIF">CIF</string>
    <string name="lblHSBC">HSBC</string>
    <string name="lblItau">Itaú</string>
    <string name="lblSantander">Santander</string>
    <string name="lblSicredi">Sicredi</string>
    <string name="lblAgencia">Agência</string>
    <string name="lblContaCorrente">Conta-corrente</string>
    <string name="lblConfirmaPedido">Confirma pedido</string>
    <string name="lblConfirmarPedido">Confirmar pedido</string>
    <string name="lblUsuarioEOuSenhaInvalidos">Usuário e/ou senha inválidos</string>
    <string name="lblPedidoCadastradoComSucesso">Pedido cadastrado com sucesso!</string>
    <string name="lblTemCertezaQueDesejaSalvarEEnviarEssePedido">Tem certeza que deseja salvar e enviar esse pedido?</string>
    <string name="lblInserirFotoDeAssinatura">Inserir foto de assinatura</string>
    <string name="lblSeuDispositivoNaoPossuiCameraFotografica">Seu dispositivo não possui câmera fotográfica</string>
    <string name="lblVoceNaoPossuiUmAplicativoDeCameraPadrao">Você não possui um aplicativo padrão de câmera</string>

</resources>
