<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPessoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblPessoa" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbPessoaFisica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFisica" />

            <RadioButton
                android:id="@+id/rbPessoaJuridica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblJuridica" />

            <RadioButton
                android:id="@+id/rbPessoaEstrangeira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEstrangeiro" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtNomeRazao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/lblNomeRazaoSocial" />

        <EditText
            android:id="@+id/edtNomeRazao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtDataNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/lblDataNascimento" />

        <EditText
            android:id="@+id/edtDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/lblddmmaaaa"
            android:inputType="date" />
    </LinearLayout>

</RelativeLayout>